feat: add request approval system for Jellyseerr integration
- Add comprehensive request approval functionality
- Allow server admins to approve/deny media requests
- Integrate approval workflow with Jellyseerr API
- Add approval status tracking and notifications
- Implement user permission checks for approval actions

Also includes:
- Complete missing translation keys for web dashboard
- Updated German, Swedish, and English localizations
- Added common UI element translations

--- a/locales/de.json
+++ b/locales/de.json
@@ -4,8 +4,8 @@
     "language_code": "de",
     "contributors": ["@retardgerman"],
     "completion": "100%",
-    "last_updated": "2025-12-27",
-    "notes": "Vollständige deutsche Übersetzung mit Du-Form - alle fehlenden Übersetzungen hinzugefügt"
+    "last_updated": "2025-12-31",
+    "notes": "Vollständige deutsche Übersetzung mit Du-Form - alle fehlenden UI-Übersetzungen hinzugefügt"
   },
   "common": {
     "yes": "Ja",
@@ -18,7 +18,20 @@
     "error": "Fehler",
     "success": "Erfolgreich",
     "username": "Benutzername",
-    "password": "Passwort"
+    "password": "Passwort",
+    "remove": "Entfernen",
+    "refresh": "Aktualisieren",
+    "search": "Suchen",
+    "add": "Hinzufügen",
+    "test": "Testen",
+    "copy": "Kopieren",
+    "start": "Starten",
+    "stop": "Stoppen",
+    "restart": "Neustarten",
+    "online": "Online",
+    "offline": "Offline",
+    "enabled": "Aktiviert",
+    "disabled": "Deaktiviert"
   },
   "auth": {
     "login": "Anmelden",
@@ -189,6 +202,79 @@
     "test_series_notification": "Serie testen",
     "test_season_notification": "Staffel testen",
     "test_episodes_notification": "Episoden testen",
+    "library_channel_mapping": "Bibliothek-Kanal-Zuordnung",
+    "library_channel_mapping_help": "Ordne spezifische Jellyfin-Bibliotheken verschiedenen Discord-Kanälen zu.",
+    "fetch_libraries": "Bibliotheken laden",
+    "map_specific_libraries": "Ordne spezifische Jellyfin-Bibliotheken verschiedenen Discord-Kanälen zu.",
+    "no_libraries_found": "Keine Bibliotheken gefunden.",
+    "tv_seasons_episodes_mapping": "TV-Staffeln und Episoden-Zuordnung",
+    "episodes": "Episoden",
+    "new_episode_notifications": "Neue Episoden-Benachrichtigungen",
+    "seasons": "Staffeln",
+    "new_season_notifications": "Neue Staffel-Benachrichtigungen",
+    "your_jellyfin_webhook_url": "Deine Jellyfin Webhook-URL",
+    "webhook_instructions": "Um Benachrichtigungen zu erhalten, füge diese URL zu deinen Jellyfin Webhook-Plugin-Einstellungen hinzu:",
+    "copy_url": "URL kopieren",
+    "embed_customization": "Embed-Anpassung",
+    "embed_customization_help": "Passe an, welche Elemente in deinen Discord-Benachrichtigungs-Embeds erscheinen.",
+    "backdrop_image": "Hintergrundbild",
+    "backdrop_image_help": "Großes Hintergrundbild",
+    "overview_description": "Übersicht/Beschreibung",
+    "overview_description_help": "Handlungszusammenfassung",
+    "genre": "Genre",
+    "genre_help": "Genre-Feld",
+    "runtime": "Laufzeit",
+    "runtime_help": "Dauer-Feld",
+    "rating": "Bewertung",
+    "rating_help": "IMDB/TMDB-Bewertung",
+    "letterboxd_button": "Letterboxd-Button",
+    "letterboxd_button_help": "Link zu Letterboxd",
+    "imdb_button": "IMDb-Button",
+    "imdb_button_help": "Link zu IMDb",
+    "watch_now_button": "Jetzt ansehen-Button",
+    "watch_now_button_help": "Link zu Jellyfin",
+    "user_mapping_legend": "Benutzer-Zuordnung",
+    "user_mapping_help": "Ordne Discord-Benutzer ihren Jellyseerr-Konten zu. Wenn ein Benutzer eine Anfrage von Discord aus stellt, wird sie mit seinem Jellyseerr-Konto verknüpft anstatt mit dem API-Schlüssel-Besitzer.",
+    "add_new_mapping": "Neue Zuordnung hinzufügen",
+    "refresh_users": "Benutzer aktualisieren",
+    "discord_user": "Discord-Benutzer",
+    "discord_user_help": "Wähle ein Discord-Server-Mitglied",
+    "jellyseerr_user": "Jellyseerr-Benutzer",
+    "jellyseerr_user_help": "Wähle das entsprechende Jellyseerr-Konto",
+    "add_mapping": "Zuordnung hinzufügen",
+    "role_permissions_legend": "Rollen-Berechtigungen",
+    "role_permissions_help": "Kontrolliere, wer Bot-Befehle verwenden kann, indem du rollenbasierte Berechtigungen konfigurierst. Wenn keine Rollen in der Erlaubnisliste ausgewählt sind, können alle Befehle verwenden. Wenn eine Rolle zur Sperrliste hinzugefügt wird, werden Mitglieder mit dieser Rolle blockiert, unabhängig von den Erlaubnislisten-Einstellungen.",
+    "allowlist_roles": "Erlaubnisliste (Nur diese Rollen erlauben)",
+    "allowlist_roles_help": "Wenn leer, können alle Mitglieder Befehle verwenden. Wenn Rollen ausgewählt sind, können nur Mitglieder mit diesen Rollen Befehle verwenden.",
+    "blocklist_roles": "Sperrliste (Diese Rollen blockieren)",
+    "blocklist_roles_help": "Mitglieder mit diesen Rollen können niemals Bot-Befehle verwenden, auch wenn sie eine erlaubte Rolle haben.",
+    "miscellaneous_settings_legend": "Verschiedene Einstellungen",
+    "miscellaneous_settings_help": "Optionale Einstellungen zur Verbesserung deiner Bot-Erfahrung. Dies sind zusätzliche Funktionen, die aktiviert werden können, nachdem dein Bot vollständig konfiguriert ist und läuft.",
+    "auto_start_bot": "Bot automatisch bei Server-Start starten",
+    "auto_start_bot_help": "Wenn aktiviert, startet der Bot automatisch, wenn der Container/Server neu startet und gültige Discord-Zugangsdaten vorhanden sind.",
+    "send_pm_when_available": "PM senden, wenn Anfrage verfügbar ist",
+    "send_pm_when_available_help": "Wenn aktiviert, erhalten Benutzer eine private Nachricht, wenn ihr angeforderter Inhalt auf Jellyfin verfügbar wird.",
+    "ephemeral_message_mode": "Kurzlebiger Nachrichten-Modus",
+    "ephemeral_message_mode_help": "Wenn aktiviert, werden alle Bot-Antworten (Such- und Anfrageergebnisse) als kurzlebige Nachrichten gesendet (nur für den Benutzer sichtbar, der den Befehl verwendet hat). Wenn deaktiviert, sind erfolgreiche Ergebnisse für alle im Kanal sichtbar, aber Warnmeldungen (z.B. \"bereits auf Jellyfin\") sind immer kurzlebig.",
+    "discord_embed_colors": "Discord Embed-Farben",
+    "discord_embed_colors_help": "Passe die Farben von Discord-Benachrichtigungs-Embeds für verschiedene Inhaltstypen an.",
+    "movies": "Filme",
+    "tv_series": "TV-Serien",
+    "seasons_color": "Staffeln",
+    "single_episode": "Einzelne Episode",
+    "few_episodes": "Wenige Episoden (2-5)",
+    "many_episodes": "Viele Episoden (6+)",
+    "search_results": "Suchergebnisse",
+    "request_success": "Anfrage erfolgreich",
+    "app_settings": "App-Einstellungen",
+    "app_settings_help": "Allgemeine Anwendungseinstellungen für Anchorr.",
+    "language": "Sprache",
+    "language_help": "Wähle die Sprache für die Anchorr Dashboard-Benutzeroberfläche.",
+    "processing": "Wird verarbeitet...",
+    "testing": "Teste...",
+    "loading": "Lade...",
+    "checking": "Prüfe...",
+    "admin": "Admin",
     "save_button": "Einstellungen speichern",
     "bot_token": "Bot Token",
     "server_id": "Discord Server ID",
