--- a/locales/en.json
+++ b/locales/en.json
@@ -4,8 +4,8 @@
     "language_code": "en",
     "contributors": ["nairdah"],
     "completion": "100%",
-    "last_updated": "2025-12-15",
-    "notes": "Base English translations"
+    "last_updated": "2025-12-31",
+    "notes": "Base English translations - missing web dashboard keys added"
   },
   "common": {
     "yes": "Yes",
@@ -18,7 +18,20 @@
     "error": "Error",
     "success": "Success",
     "username": "Username",
-    "password": "Password"
+    "password": "Password",
+    "remove": "Remove",
+    "refresh": "Refresh",
+    "search": "Search",
+    "add": "Add",
+    "test": "Test",
+    "copy": "Copy",
+    "start": "Start",
+    "stop": "Stop",
+    "restart": "Restart",
+    "online": "Online",
+    "offline": "Offline",
+    "enabled": "Enabled",
+    "disabled": "Disabled"
   },
   "auth": {
     "login": "Login",
@@ -124,6 +137,79 @@
     "test_series_notification": "Test Series",
     "test_season_notification": "Test Season",
     "test_episodes_notification": "Test Episodes",
+    "library_channel_mapping": "Library Channel Mapping",
+    "library_channel_mapping_help": "Map specific Jellyfin libraries to different Discord channels.",
+    "fetch_libraries": "Fetch Libraries",
+    "map_specific_libraries": "Map specific Jellyfin libraries to different Discord channels.",
+    "no_libraries_found": "No libraries found.",
+    "tv_seasons_episodes_mapping": "TV Seasons and Episodes Mapping",
+    "episodes": "Episodes",
+    "new_episode_notifications": "New episode notifications",
+    "seasons": "Seasons", 
+    "new_season_notifications": "New season notifications",
+    "your_jellyfin_webhook_url": "Your Jellyfin Webhook URL",
+    "webhook_instructions": "To receive notifications, add this URL to your Jellyfin Webhooks plugin settings:",
+    "copy_url": "Copy URL",
+    "embed_customization": "Embed Customization",
+    "embed_customization_help": "Customize which elements appear in your Discord notification embeds.",
+    "backdrop_image": "Backdrop Image",
+    "backdrop_image_help": "Large background image",
+    "overview_description": "Overview/Description",
+    "overview_description_help": "Plot summary text",
+    "genre": "Genre",
+    "genre_help": "Genre field",
+    "runtime": "Runtime",
+    "runtime_help": "Duration field",
+    "rating": "Rating",
+    "rating_help": "IMDB/TMDB rating",
+    "letterboxd_button": "Letterboxd Button",
+    "letterboxd_button_help": "Link to Letterboxd",
+    "imdb_button": "IMDb Button", 
+    "imdb_button_help": "Link to IMDb",
+    "watch_now_button": "Watch Now Button",
+    "watch_now_button_help": "Link to Jellyfin",
+    "user_mapping_legend": "User Mapping",
+    "user_mapping_help": "Map Discord users to their Jellyseerr accounts. When a user makes a request from Discord, it will be associated with their Jellyseerr account instead of the API key owner.",
+    "add_new_mapping": "Add New Mapping",
+    "refresh_users": "Refresh Users",
+    "discord_user": "Discord User",
+    "discord_user_help": "Select a Discord server member",
+    "jellyseerr_user": "Jellyseerr User",
+    "jellyseerr_user_help": "Select the corresponding Jellyseerr account",
+    "add_mapping": "Add Mapping",
+    "role_permissions_legend": "Role Permissions",
+    "role_permissions_help": "Control who can use bot commands by configuring role-based permissions. If no roles are selected in the allowlist, everyone can use commands. If any role is added to the blocklist, members with that role will be blocked regardless of allowlist settings.",
+    "allowlist_roles": "Allowlist (Allow Only These Roles)",
+    "allowlist_roles_help": "If empty, all members can use commands. If roles are selected, only members with these roles can use commands.",
+    "blocklist_roles": "Blocklist (Block These Roles)",
+    "blocklist_roles_help": "Members with these roles will never be able to use bot commands, even if they have an allowed role.",
+    "miscellaneous_settings_legend": "Miscellaneous Settings",
+    "miscellaneous_settings_help": "Optional settings to enhance your bot experience. These are extra features that can be enabled after your bot is fully configured and running.",
+    "auto_start_bot": "Auto-start bot on server boot",
+    "auto_start_bot_help": "If enabled, the bot starts automatically when the container/server restarts and valid Discord credentials are present.",
+    "send_pm_when_available": "Send PM when request is available",
+    "send_pm_when_available_help": "When enabled, users will receive a private message when their requested content becomes available on Jellyfin.",
+    "ephemeral_message_mode": "Ephemeral Message Mode",
+    "ephemeral_message_mode_help": "When enabled, all bot responses (search and request results) are sent as ephemeral messages (only visible to the user who used the command). When disabled, successful results are visible to everyone in the channel, but warning messages (e.g., \"already on Jellyfin\") are always ephemeral.",
+    "discord_embed_colors": "Discord Embed Colors",
+    "discord_embed_colors_help": "Customize the colors of Discord notification embeds for different content types.",
+    "movies": "Movies",
+    "tv_series": "TV Series",
+    "seasons_color": "Seasons",
+    "single_episode": "Single Episode",
+    "few_episodes": "Few Episodes (2-5)",
+    "many_episodes": "Many Episodes (6+)",
+    "search_results": "Search Results",
+    "request_success": "Request Success",
+    "app_settings": "App Settings",
+    "app_settings_help": "General application settings for Anchorr.",
+    "language": "Language",
+    "language_help": "Select the language for the Anchorr dashboard interface.",
+    "processing": "Processing...",
+    "testing": "Testing...",
+    "loading": "Loading...",
+    "checking": "Checking...",
+    "admin": "Admin",
     "save_button": "Save Settings"
   },
   "ui": {
