--- a/locales/sv.json
+++ b/locales/sv.json
@@ -4,8 +4,8 @@
     "language_code": "sv",
     "contributors": ["Simon Eklundh", "GitHub Copilot"],
     "completion": "100%",
-    "last_updated": "2025-12-23",
-    "notes": "Complete Swedish translation - all sections translated, merged PR improvements"
+    "last_updated": "2025-12-31",
+    "notes": "Complete Swedish translation - all sections translated, missing keys added"
   },
   "common": {
     "yes": "Ja",
@@ -18,7 +18,20 @@
     "error": "Fel",
     "success": "succé",
     "username": "Användarnamn",
-    "password": "Lösenord"
+    "password": "Lösenord",
+    "remove": "Ta bort",
+    "refresh": "Uppdatera",
+    "search": "Sök",
+    "add": "Lägg till",
+    "test": "Testa",
+    "copy": "Kopiera",
+    "start": "Starta",
+    "stop": "Stoppa",
+    "restart": "Starta om",
+    "online": "Online",
+    "offline": "Offline",
+    "enabled": "Aktiverad",
+    "disabled": "Inaktiverad"
   },
   "auth": {
     "login": "Logga in",
@@ -102,6 +115,101 @@
     "test_endpoint_help": "Kontrollera Jellyfin-endpoint",
     "jellyfin_server_id": "Jellyfin server-ID",
     "jellyfin_server_id_help": "Ange server-ID för Jellyfin",
+    "next_steps_title": "Nästa steg",
+    "next_step_1": "Klicka på knappen <strong>Spara inställningar</strong> längst ned i sidopanelen",
+    "next_step_2": "Klicka på knappen <strong>Starta bot</strong> överst på sidan",
+    "next_step_3": "När boten körs kommer rullgardinsmenyer nedan automatiskt att fyllas med dina servrar och kanaler",
+    "load_profiles_servers": "Ladda profiler och servrar",
+    "default_quality_profiles": "Standardkvalitetsprofiler (Valfritt)",
+    "default_quality_profiles_help": "Ange standardkvalitetsprofiler och servrar för medieförfrågningar. Dessa kommer att användas när användare inte anger en profil via /request-kommandot.",
+    "default_movie_quality": "Standardfilmkvalitet",
+    "default_movie_quality_help": "Kvalitetsprofil för filmförfrågningar (Radarr)",
+    "default_tv_quality": "Standard-TV-kvalitet",
+    "default_tv_quality_help": "Kvalitetsprofil för TV-serieförfrågningar (Sonarr)",
+    "default_movie_server": "Standardfilmserver",
+    "default_movie_server_help": "Radarr-server för filmförfrågningar",
+    "default_tv_server": "Standard-TV-server",
+    "default_tv_server_help": "Sonarr-server för TV-serieförfrågningar",
+    "use_jellyseerr_default": "Använd Jellyseerr-standard",
+    "notification_testing_title": "Testning av notifieringar",
+    "notification_testing_help": "Skicka testnotifieringar för att förhandsgranska hur dina notifieringsmallar ser ut. Dessa skickar exempelnotifieringar med slumpmässiga film-/seriedata utan att kräva faktiska Jellyfin webhook-triggers.",
+    "test_movie_notification": "Testa film",
+    "test_series_notification": "Testa serie",
+    "test_season_notification": "Testa säsong",
+    "test_episodes_notification": "Testa avsnitt",
+    "library_channel_mapping": "Bibliotekskanalmappning",
+    "library_channel_mapping_help": "Mappa specifika Jellyfin-bibliotek till olika Discord-kanaler.",
+    "fetch_libraries": "Hämta bibliotek",
+    "map_specific_libraries": "Mappa specifika Jellyfin-bibliotek till olika Discord-kanaler.",
+    "no_libraries_found": "Inga bibliotek hittades.",
+    "tv_seasons_episodes_mapping": "TV-säsonger och avsnittsmappning",
+    "episodes": "Avsnitt",
+    "new_episode_notifications": "Nya avsnittnotifieringar",
+    "seasons": "Säsonger",
+    "new_season_notifications": "Nya säsongsnotifieringar",
+    "your_jellyfin_webhook_url": "Din Jellyfin Webhook-URL",
+    "webhook_instructions": "För att ta emot notifieringar, lägg till denna URL i dina Jellyfin Webhooks plugin-inställningar:",
+    "copy_url": "Kopiera URL",
+    "embed_customization": "Embed-anpassning",
+    "embed_customization_help": "Anpassa vilka element som visas i dina Discord-notifieringsembeds.",
+    "backdrop_image": "Bakgrundsbild",
+    "backdrop_image_help": "Stor bakgrundsbild",
+    "overview_description": "Översikt/Beskrivning",
+    "overview_description_help": "Plotsammanfattningstext",
+    "genre": "Genre",
+    "genre_help": "Genrefält",
+    "runtime": "Speltid",
+    "runtime_help": "Varaktighetsfält",
+    "rating": "Betyg",
+    "rating_help": "IMDB/TMDB betyg",
+    "letterboxd_button": "Letterboxd-knapp",
+    "letterboxd_button_help": "Länk till Letterboxd",
+    "imdb_button": "IMDb-knapp",
+    "imdb_button_help": "Länk till IMDb",
+    "watch_now_button": "Titta nu-knapp",
+    "watch_now_button_help": "Länk till Jellyfin",
+    "user_mapping_legend": "Användarmappning",
+    "user_mapping_help": "Mappa Discord-användare till deras Jellyseerr-konton. När en användare gör en förfrågan från Discord kommer den att associeras med deras Jellyseerr-konto istället för API-nyckelägaren.",
+    "add_new_mapping": "Lägg till ny mappning",
+    "refresh_users": "Uppdatera användare",
+    "discord_user": "Discord-användare",
+    "discord_user_help": "Välj en Discord-servermedlem",
+    "jellyseerr_user": "Jellyseerr-användare",
+    "jellyseerr_user_help": "Välj motsvarande Jellyseerr-konto",
+    "add_mapping": "Lägg till mappning",
+    "role_permissions_legend": "Rollbehörigheter",
+    "role_permissions_help": "Kontrollera vem som kan använda bot-kommandon genom att konfigurera rollbaserade behörigheter. Om inga roller är valda i tillåt-listan kan alla använda kommandon. Om någon roll läggs till i blockeringslistan blockeras medlemmar med den rollen oavsett tillåt-listan.",
+    "allowlist_roles": "Tillåt-lista (Tillåt endast dessa roller)",
+    "allowlist_roles_help": "Om tom kan alla medlemmar använda kommandon. Om roller är valda kan endast medlemmar med dessa roller använda kommandon.",
+    "blocklist_roles": "Blockeringslista (Blockera dessa roller)",
+    "blocklist_roles_help": "Medlemmar med dessa roller kommer aldrig att kunna använda bot-kommandon, även om de har en tillåten roll.",
+    "miscellaneous_settings_legend": "Diverse inställningar",
+    "miscellaneous_settings_help": "Valfria inställningar för att förbättra din bot-upplevelse. Dessa är extra funktioner som kan aktiveras efter att din bot är helt konfigurerad och körs.",
+    "auto_start_bot": "Starta bot automatiskt vid serverstart",
+    "auto_start_bot_help": "Om aktiverat startar boten automatiskt när containern/servern startas om och giltiga Discord-uppgifter finns.",
+    "send_pm_when_available": "Skicka PM när förfrågan är tillgänglig",
+    "send_pm_when_available_help": "När aktiverat får användare ett privat meddelande när deras begärda innehåll blir tillgängligt på Jellyfin.",
+    "ephemeral_message_mode": "Tillfälligt meddelandeläge",
+    "ephemeral_message_mode_help": "När aktiverat skickas alla bot-svar (sök- och förfrågningsresultat) som tillfälliga meddelanden (endast synliga för användaren som använde kommandot). När inaktiverat är framgångsrika resultat synliga för alla i kanalen, men varningsmeddelanden (t.ex. \"redan på Jellyfin\") är alltid tillfälliga.",
+    "discord_embed_colors": "Discord Embed-färger",
+    "discord_embed_colors_help": "Anpassa färgerna på Discord-notifieringsembeds för olika innehållstyper.",
+    "movies": "Filmer",
+    "tv_series": "TV-serier",
+    "seasons_color": "Säsonger",
+    "single_episode": "Enstaka avsnitt",
+    "few_episodes": "Få avsnitt (2-5)",
+    "many_episodes": "Många avsnitt (6+)",
+    "search_results": "Sökresultat",
+    "request_success": "Framgångsrik förfrågan",
+    "app_settings": "App-inställningar",
+    "app_settings_help": "Allmänna applikationsinställningar för Anchorr.",
+    "language": "Språk",
+    "language_help": "Välj språk för Anchorr dashboard-gränssnittet.",
+    "processing": "Bearbetar...",
+    "testing": "Testar...",
+    "loading": "Laddar...",
+    "checking": "Kontrollerar...",
+    "admin": "Admin",
     "save_button": "Spara inställningar"
   },
   "ui": {
