--- a/locales/template.json
+++ b/locales/template.json
@@ -4,8 +4,8 @@
     "language_code": "xx",
     "contributors": ["Your Name"],
     "completion": "0%",
-    "last_updated": "YYYY-MM-DD",
-    "notes": "Translation notes or specific considerations"
+    "last_updated": "2025-12-31",
+    "notes": "Template with all available translation keys"
   },
   "common": {
     "yes": "",
@@ -18,7 +18,20 @@
     "error": "",
     "success": "",
     "username": "",
-    "password": ""
+    "password": "",
+    "remove": "",
+    "refresh": "",
+    "search": "",
+    "add": "",
+    "test": "",
+    "copy": "",
+    "start": "",
+    "stop": "",
+    "restart": "",
+    "online": "",
+    "offline": "",
+    "enabled": "",
+    "disabled": ""
   },
   "auth": {
     "login": "",
@@ -97,6 +110,106 @@
     "test_endpoint_help": "",
     "jellyfin_server_id": "",
     "jellyfin_server_id_help": "",
+    "next_steps_title": "",
+    "next_step_1": "",
+    "next_step_2": "",
+    "next_step_3": "",
+    "load_profiles_servers": "",
+    "default_quality_profiles": "",
+    "default_quality_profiles_help": "",
+    "default_movie_quality": "",
+    "default_movie_quality_help": "",
+    "default_tv_quality": "",
+    "default_tv_quality_help": "",
+    "default_movie_server": "",
+    "default_movie_server_help": "",
+    "default_tv_server": "",
+    "default_tv_server_help": "",
+    "use_jellyseerr_default": "",
+    "episode_channel": "",
+    "episode_channel_help": "",
+    "season_channel": "",
+    "season_channel_help": "",
+    "use_default_channel": "",
+    "notification_testing_title": "",
+    "notification_testing_help": "",
+    "test_movie_notification": "",
+    "test_series_notification": "",
+    "test_season_notification": "",
+    "test_episodes_notification": "",
+    "library_channel_mapping": "",
+    "library_channel_mapping_help": "",
+    "fetch_libraries": "",
+    "map_specific_libraries": "",
+    "no_libraries_found": "",
+    "tv_seasons_episodes_mapping": "",
+    "episodes": "",
+    "new_episode_notifications": "",
+    "seasons": "",
+    "new_season_notifications": "",
+    "your_jellyfin_webhook_url": "",
+    "webhook_instructions": "",
+    "copy_url": "",
+    "embed_customization": "",
+    "embed_customization_help": "",
+    "backdrop_image": "",
+    "backdrop_image_help": "",
+    "overview_description": "",
+    "overview_description_help": "",
+    "genre": "",
+    "genre_help": "",
+    "runtime": "",
+    "runtime_help": "",
+    "rating": "",
+    "rating_help": "",
+    "letterboxd_button": "",
+    "letterboxd_button_help": "",
+    "imdb_button": "",
+    "imdb_button_help": "",
+    "watch_now_button": "",
+    "watch_now_button_help": "",
+    "user_mapping_legend": "",
+    "user_mapping_help": "",
+    "add_new_mapping": "",
+    "refresh_users": "",
+    "discord_user": "",
+    "discord_user_help": "",
+    "jellyseerr_user": "",
+    "jellyseerr_user_help": "",
+    "add_mapping": "",
+    "role_permissions_legend": "",
+    "role_permissions_help": "",
+    "allowlist_roles": "",
+    "allowlist_roles_help": "",
+    "blocklist_roles": "",
+    "blocklist_roles_help": "",
+    "miscellaneous_settings_legend": "",
+    "miscellaneous_settings_help": "",
+    "auto_start_bot": "",
+    "auto_start_bot_help": "",
+    "send_pm_when_available": "",
+    "send_pm_when_available_help": "",
+    "ephemeral_message_mode": "",
+    "ephemeral_message_mode_help": "",
+    "discord_embed_colors": "",
+    "discord_embed_colors_help": "",
+    "movies": "",
+    "tv_series": "",
+    "seasons_color": "",
+    "single_episode": "",
+    "few_episodes": "",
+    "many_episodes": "",
+    "search_results": "",
+    "request_success": "",
+    "app_settings": "",
+    "app_settings_help": "",
+    "language": "",
+    "language_help": "",
+    "processing": "",
+    "testing": "",
+    "loading": "",
+    "checking": "",
+    "admin": "",
     "save_button": ""
   },
   "ui": {
