fix: refactor permission system for Jellyseerr integration
## Problem Summary
The request approval system was fundamentally broken due to incorrect
permission handling and hardcoded permission constants that didn't match
Jellyseerr's actual permission system.

### What Was Broken

**Permission Detection Issues:**
- Used incorrect bitwise operations (user.permissions & 1) and (user.permissions & 2)
  instead of official Jellyseerr permission constants
- Hardcoded permission values didn't align with Jellyseerr's actual permission system
- Permission 1 was assumed to be Admin, but Jellyseerr uses Permission.ADMIN = 2
- Permission 2 was assumed to be Manage Requests, but Jellyseerr uses
  Permission.MANAGE_REQUESTS = 16
- No validation of permission values, leading to silent failures

**Request Approval Logic:**
- hasAdminPermissions() function didn't properly check for request approval capabilities
- Admin users (Permission.ADMIN = 2) and users with Manage Requests permission
  (Permission.MANAGE_REQUESTS = 16) should both be able to approve requests
- Function returned false for legitimate admin users due to wrong constants

**User Interface Issues:**
- Role badges in web dashboard showed incorrect or missing role information
- No systematic way to determine user permission levels for display
- Permission parsing was inconsistent between backend and frontend

## Solution Implemented

### 1. Centralized Permission System (lib/permissions.js)
Created a comprehensive permission handling system based on official Jellyseerr
permission constants:

**Core Functions:**
- hasPermission(): Proper bitwise permission checking with admin override
- canApproveRequests(): Specifically checks for request approval capabilities
- getPermissionType(): Determines highest privilege level (admin/manager/auto-approve/user)
- analyzePermissions(): Detailed permission breakdown for debugging

**Permission Constants:**
- Imported actual Jellyseerr permission values from official source
- Permi

--- a/locales/de.json
+++ b/locales/de.json
@@ -275,6 +275,11 @@
     "loading": "Lade...",
     "checking": "Prüfe...",
     "admin": "Admin",
+    "manager": "Verwalter",
+    "auto_approve": "Auto-Genehmigung", 
+    "user": "Benutzer",
+    "error": "Fehler",
+    "unknown": "Unbekannt",
     "save_button": "Einstellungen speichern",
     "bot_token": "Bot Token",
     "server_id": "Discord Server ID",
