--- a/locales/template.json
+++ b/locales/template.json
@@ -210,6 +210,11 @@
     "loading": "",
     "checking": "",
     "admin": "",
+    "manager": "",
+    "auto_approve": "",
+    "user": "",
+    "error": "",
+    "unknown": "",
     "save_button": ""
   },
   "ui": {
